--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -1,56 +1,68 @@
-name: Build & Deploy
+name: Development
 
 on:
-  push:
-    branches:
-      - master
+#  push:
+#    branches:
+#      - master
     pull_request:
       branches:
-        - master
+        - dev
 
 jobs:
-  build:
-    name: Build
+  deploy:
     runs-on: Ubuntu-latest
+#  build:
+ #   name: Build
+ #   runs-on: Ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Install Node.js
+    - name: Use Node.js
       uses: actions/setup-node@v1
       with:
         node-version: 13.x
 
-    - name: Install NPM packages
-      run: npm ci
+   # - name: Install NPM packages
+    - run: npm install
+    - run: npm run build --if-present
 
-    - name: Build project
-      run: npm run build
-
-    - name: Run tests
-      run: npm run test
-
-    - name: Uplode production-ready build files
-      uses: actions/uplode-artifact@v2
+    - name: Deploy to Netlify
+    #  run: npm run build
+      uses: netlify/actions/cli@master
+      env:
+        NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+        NETLIFY_SITE_ID: ${{ secrets.DEV_NETLIFY_SITE_ID }}
       with:
-        name: production-files
-        path: ./build
-    deploy:
-    name: Deploy
-    needs: build
-    runs-on: Ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+        args: deploy --dir=build --prod
+        secrets: '["DEV_NETLIFY_AUTH_TOKEN", "NETLIFY_SITE_ID"]'
+    #- name: Run tests
+     # run: npm run test
 
-    steps:
-    - name: Download artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: production-files
-        path: ./build
+    #- name: Uplode production-ready build files
+     # uses: actions/uplode-artifact@v2
+      #with:
+       # name: production-files
+        #path: ./build
+    #deploy:
+    #name: Deploy
+    #needs: build
+    #runs-on: Ubuntu-latest
+    #if: github.ref == 'refs/heads/master'
 
-    - name: Deploy to gh-pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./build
+    #steps:
+    #- name: Download artifact
+     # uses: actions/download-artifact@v2
+      #with:
+       # name: production-files
+        #path: ./build
+
+    #- name: Deploy to gh-pages
+     # uses: peaceiris/actions-gh-pages@v3
+
+#    - name: Deploy to Netlify
+ #     uses: 
+  #    with:
+   #     github_token: ${{ secrets.GITHUB_TOKEN }}
+    #    publish_dir: ./build
