--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "emoji-search",
   "version": "0.1.0",
   "license": "MIT",
-  "homepage": "http://ahfarmer.github.io/emoji-search",
+  "homepage": "/",
   "devDependencies": {
     "gh-pages": "^2.0.1",
     "prettier": "^1.17.1",
